# study-vte

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/parcours_patients/: study_v1_DP_DR_DAS.cfg  study_v2_AREM_DP.cfg
cse_180031/: __init__.py  utils_cse.py
cse_180031/parcours_patient/: __init__.py  compute_stats.py  patient_selection.py  viz_histogramm.py  viz_sankey.py
data/: UF_NOT_SPECIFIED.csv  department_category.csv
notebooks/parcours_patient/: generate_figures.md  processing_data.md
scripts/parcours_patients/: generate_figures.py  process_data.py
