[tool.poetry]
name = "cse_180031"
version = "0.0.1"
description = "Evaluation rétrospective de la prise en charge thérapeutique de la maladie thromboembolique veineuse par les praticiens de l’APHP"
authors = ["Adam Remaki <adam.remaki@aphp.fr>"]
maintainers = ["Adam Remaki <adam.remaki@aphp.fr>"]
repository = "https://gitlab.eds.aphp.fr/partage_code_projets_cse/cse_180031"

[tool.poetry.dependencies]
python = "~3.7.1"
pyspark = "~2.4.3"
pandas = "^1.3"
altair = "^5.0"
loguru = "^0.6"
numpy = "^1.21.0"
edsnlp = "0.7.4"
plotly = "^5.8.2"
jupyterlab = "^3.4.3"
ipywidgets = "^7.7.0"
lifelines = "^0.27.1"
rich = "^12.6.0"
typer = "^0.4"
confection = "0.0.4"
dataframe-image = "0.1.14"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
jupytext = "^1.13.7"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
nb-black = "1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
